Cherry-pick 261566@main (2d385163e7ce). https://bugs.webkit.org/show_bug.cgi?id=177039

[Freetype] Apply basic font properties as font variation settings
    https://bugs.webkit.org/show_bug.cgi?id=177039

    Reviewed by Carlos Garcia Campos.

    This patch makes sure that the basic font properties,
    such as `font-weight`, `font-width`, and `font-style`,
    are applied in the same way as `font-variation-settings`.

    * LayoutTests/fast/text/variations/basic-properties-expected.html: Added.
    * LayoutTests/fast/text/variations/basic-properties.html: Added.
    * LayoutTests/fast/text/variations/resources/AmstelvarAlpha-VF.woff2: Added.
    * LayoutTests/fast/text/variations/resources/Roboto-VF.woff2: Added.
    * LayoutTests/fast/text/variations/resources/jost-VF.woff2: Added.
    * Source/WebCore/platform/graphics/freetype/FontCacheFreeType.cpp:
    (WebCore::buildVariationSettings):

    Canonical link: https://commits.webkit.org/261566@main